--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="output">
             <div id="outputSpinner" class="spinner"></div>
-            <img id="outputImage" src="./cube/island0.png" alt="Output Image">
+            <img id="outputImage" src="./cube.png" alt="Output Image">
         </div>
         <canvas id="outputCanvas" ></canvas>
 
@@ -221,9 +221,9 @@
             const polygonRadio = document.getElementById('polygon');
 
             if (cubeRadio.checked) {
-                referenceImage.src = './cube/island0.png'; // Ensure the correct path
+                referenceImage.src = './cube.png'; // Ensure the correct path
             } else if (polygonRadio.checked) {
-                referenceImage.src = './polygon/island0.png'; // Ensure the correct path
+                referenceImage.src = './polygon.png'; // Ensure the correct path
             }
         }
 
