--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="output">
             <div id="outputSpinner" class="spinner"></div>
-            <img id="outputImage" src="./cube/island0.png" alt="Output Image">
+            <img id="outputImage" src="./cube.png" alt="Output Image">
         </div>
         <canvas id="outputCanvas" ></canvas>
 
@@ -232,16 +232,16 @@
             const polygonRadio = document.getElementById('polygon');
 
             if (cubeRadio.checked) {
-                referenceImage.src = './cube/island0.png'; // Ensure the correct path
+                referenceImage.src = './cube.png'; // Ensure the correct path
             } else if (polygonRadio.checked) {
-                referenceImage.src = './polygon/island0.png'; // Ensure the correct path
+                referenceImage.src = './polygon.png'; // Ensure the correct path
             }
         }
         // add an event listener to the cube radio button
         const cubeRadio = document.getElementById('cube');
         cubeRadio.addEventListener('change', function() {
             if (!generatedImage) {
-                outputImgTag.src = './cube/island0.png';
+                outputImgTag.src = './cube.png';
             }
 
         });
@@ -250,7 +250,7 @@
         const polygonRadio = document.getElementById('polygon');
         polygonRadio.addEventListener('change', function() {
             if (!generatedImage) {
-                outputImgTag.src = './polygon/island0.png';
+                outputImgTag.src = './polygon.png';
             }
         });
 
