--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         cubeRadio.addEventListener('change', function() {
             // if (!generatedImage) {
                 outputImgTag.data = './cube.svg';
-                referenceImage.src = './cube/island0.png';
+                referenceImage.src = './cube.png';
             // }
 
         });
@@ -325,7 +325,7 @@
         polygonRadio.addEventListener('change', function() {
             // if (!generatedImage) {
                 outputImgTag.data = './polygon.svg';
-                referenceImage.src = './polygon/island0.png';
+                referenceImage.src = './polygon.png';
             // }
         });
         
