--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
 
 
             if (cubeRadio.checked) {
-                referenceImage.src = './cube/island0.png'; // Ensure the correct path
+                referenceImage.src = './cube.png'; // Ensure the correct path
             } else if (polygonRadio.checked) {
-                referenceImage.src = './polygon/island0.png'; // Ensure the correct path
+                referenceImage.src = './polygon.png'; // Ensure the correct path
             }
         }
         // add an event listener to the cube radio button
